--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "blockchain-demo",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://bellalo12.github.io/portfolio",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-particles-js": "^2.2.0",
