--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "YiFang Lo",
-  "name": "Create React App Sample",
+  "name": "YiFang Lo - Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "https://bellalo12.github.io/portfolio/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
